# spmt-api

./: .gitignore  Cargo.toml  README.md  flake.nix  setup.sql
api/: Cargo.toml  startdb.sh  stopdb.sh
api/migration/src/: m20230407_000001_create_test_user_table.rs  m20230817_075937_create_playlist.rs  m20230817_083218_create_track.rs  m20230817_084239_create_album.rs
api/src/: error.rs  session.rs  sync.rs
api/src/entities/: artist.rs  like.rs  mod.rs  track.rs  user.rs
config/: Rocket.toml
config/certs/: CA-spmt.der  CA-spmt.key  CA-spmt.key.der  CA-spmt.pem  localhost.key  localhost.pem  localhost8443.key  localhost8443.pem  spmtb.key  spmtb.pem
entity/: Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20230407_000001_create_test_user_table.rs  m20230817_082329_create_artist.rs  m20230817_085519_create_like.rs  m20230817_085837_create_tag.rs
src/: error.rs  main.rs  old_main.rs  session.rs  spotify.rs
src/entities/: album.rs  mod.rs  playlist.rs  prelude.rs  tag.rs  user.rs
webapp/: Cargo.toml  index.html
webapp/scss/: style.scss
webapp/src/: main.rs
